--- a/docs/开发计划.md
+++ b/docs/开发计划.md
@@ -1,8 +1,8 @@
 # **开发计划书 - 简易购物平台**
 
-**版本：V1.0**
+**版本：V1.3**
 
-**目标：** 本文档旨在将《需求分析书 V1.1》和《项目架构设计书 V1.0》转化为一份清晰、可执行、可跟踪的开发任务清单。
+**目标：** 本文档旨在将《需求分析书 V1.3》和《项目架构设计书 V1.3》转化为一份清晰、可执行、可跟踪的开发任务清单。
 
 ---
 
@@ -162,25 +162,122 @@
 
 ---
 
-## **阶段四：优化与完善**
+## **阶段四：个人中心与收藏功能**
+
+**目标：** 完成“我的”标签页下的个人中心主页和完整的商品收藏功能闭环。
+
+- `[ ]` **任务 4.1：架构文件与服务层扩展**
+    - **描述：** 创建新功能所需的架构文件，并实现对应的服务层。
+    - **子任务：**
+        - `[ ]` 创建 `model/Address.ts`, `model/Order.ts` 等新模型文件。
+        - `[ ]` 创建 `service/FavoriteService.ts`, `service/AddressService.ts`, `service/OrderService.ts`。
+        - `[ ]` 在 `FavoriteService.ts` 中实现收藏数据的持久化逻辑。
+        - `[ ]` 创建所有新的 ViewModel 和 Page/View 文件。
+    - **验证：** 单元测试通过，服务层逻辑正确；文件结构与架构文档一致。
+
+- `[ ]` **任务 4.2：主导航适配与个人中心主页**
+    - **描述：** 更新底部导航栏为三标签，并开发 `ProfilePage` 作为用户个性化功能的统一入口。
+    - **子任务：**
+        - `[ ]` 修改 `view/BottomTabs.ets`，增加“我的”标签，链接到 `pages/ProfilePage.ets`。
+        - `[ ]` 创建 `viewmodel/ProfileViewModel.ts`，负责从服务层加载用户信息和默认地址。
+        - `[ ]` 实现 `pages/ProfilePage.ets` 的UI布局，展示用户头像、昵称、电话、默认地址，并包含导航入口。
+        - `[ ]` 实现“退出登录”功能，点击后清空 `AppStorage` 状态并返回首页。
+    - **验证：** 👤 登录后进入“我的”页面，能正确显示用户信息，点击各入口能跳转，退出功能正常。
+
+- `[ ]` **任务 4.3：首页与详情页UI增强**
+    - **描述：** 在商品展示页面添加搜索框和收藏按钮的前端交互。
+    - **子任务：**
+        - `[ ]` 在 `Index.ets` 页面顶部添加搜索框 `TextInput` 组件，并实现基于输入内容的实时过滤逻辑。
+        - `[ ]` 在 `ProductCard.ets` 和 `DetailsPage.ets` 中，添加一个“心形”收藏图标按钮。
+    - **验证：** 👤 首页UI显示正确，输入关键词能筛选商品，收藏按钮可点击。
+
+- `[ ]` **任务 4.4：商品收藏功能闭环**
+    - **描述：** 实现完整的商品收藏业务逻辑，包括状态持久化和收藏列表展示。
+    - **子任务：**
+        - `[ ]` 创建 `viewmodel/FavoriteViewModel.ts`，负责调用 `FavoriteService` 并管理收藏状态。
+        - `[ ]` 将首页和详情页的收藏按钮绑定到 `FavoriteViewModel` 的方法，实现状态切换和持久化。
+        - `[ ]` 创建 `pages/FavoriteListPage.ets` 和 `view/FavoriteItem.ets`，展示用户收藏的商品列表。
+    - **依赖：** 任务 4.1, 4.3。
+    - **验证：** 👤 收藏/取消收藏后，图标和列表状态同步更新。刷新预览器后收藏状态保持不变。
+
+---
+
+## **阶段五：地址与个人信息管理**
+
+**目标：** 完成收货地址管理和修改个人信息的功能。
+
+- `[ ]` **任务 5.1：收货地址管理**
+    - **描述：** 开发完整的地址增、删、改、查及设置默认功能。
+    - **子任务：**
+        - `[ ]` 在 `service/AddressService.ts` 中实现地址数据的持久化逻辑。
+        - `[ ]` 创建 `viewmodel/AddressViewModel.ts`，封装地址管理的业务逻辑。
+        - `[ ]` 创建 `pages/AddressManagementPage.ets` 和 `view/AddressItem.ets`，展示、新增、编辑、删除地址。
+        - `[ ]` 实现“设为默认”功能，并确保 `isDefault` 状态的唯一性。
+    - **依赖：** 任务 4.1。
+    - **验证：** 👤 手动测试地址的增删改查和设置默认功能，数据能正确持久化。
+
+- `[ ]` **任务 5.2：修改个人信息**
+    - **描述：** 开发允许用户修改个人资料（如昵称、电话）的页面。
+    - **子任务：**
+        - `[ ]` 增强 `UserService.ts` 以支持修改用户信息。
+        - `[ ]` 创建 `viewmodel/EditProfileViewModel.ts`，负责加载和保存用户信息。
+        - `[ ]` 创建 `pages/EditProfilePage.ets`，提供表单供用户修改信息。
+    - **验证：** 👤 修改信息并保存后，个人中心主页显示的信息同步更新。刷新后数据保持不变。
+
+---
+
+## **阶段六：订单与支付全流程贯通**
+
+**目标：** 实现从购物车结算到订单生成、持久化，再到历史订单查看的完整购物闭环。
+
+- `[ ]` **任务 6.1：订单确认页实现**
+    - **描述：** 开发 `OrderConfirmationPage`，作为支付前的最后确认步骤。
+    - **子任务：**
+        - `[ ]` 创建 `pages/OrderConfirmationPage.ets`，页面需展示收货地址（默认/可选择）、商品清单、价格明细。
+        - `[ ]` 增强 `CartViewModel`，添加获取和选择地址的逻辑。
+        - `[ ]` 实现点击地址区域跳转到地址列表进行选择的功能。
+    - **依赖：** 任务 5.1。
+    - **验证：** 👤 从购物车结算能进入确认页，正确显示默认地址和商品信息。
+
+- `[ ]` **任务 6.2：模拟支付与订单生成**
+    - **描述：** 实现模拟支付流程，并在支付成功后创建并持久化订单。
+    - **子任务：**
+        - `[ ]` 在 `service/OrderService.ts` 中实现订单数据的持久化逻辑。
+        - `[ ]` 在订单确认页点击“确认支付”，弹出包含支付方式选项的对话框。
+        - `[ ]` 用户确认支付后，调用 `OrderService` 创建订单并持久化，然后清空购物车。
+        - `[ ]` 跳转到 `CheckoutSuccessPage.ets`。
+    - **依赖：** 任务 4.1, 6.1。
+    - **验证：** 👤 完成支付后，购物车被清空，`Preferences` 中能找到新生成的订单数据。
+
+- `[ ]` **任务 6.3：我的订单页面**
+    - **描述：** 开发 `OrderListPage`，展示用户的所有历史订单。
+    - **子任务：**
+        - `[ ]` 创建 `viewmodel/OrderViewModel.ts`，负责从 `OrderService` 加载订单数据。
+        - `[ ]` 创建 `pages/OrderListPage.ets` 和 `view/OrderItemSummary.ets`，展示历史订单列表。
+    - **依赖：** 任务 6.2。
+    - **验证：** 👤 在“我的”页面点击“我的订单”，能看到所有历史订单记录。
+
+---
+
+## **阶段七：优化与完善**
 
 **目标：** 提升应用整体的UI/UX体验和代码质量。
 
-- `[ ]` **任务 4.1：👤 UI风格统一与优化**
+- `[ ]` **任务 7.1：👤 UI风格统一与优化**
     - **描述：** 调整UI细节，确保应用整体风格一致、美观。
     - **子任务：**
         - `[ ]` 调整 `RegisterPage.ets` 的背景图样式，使其与其他页面的简洁风格保持一致。
         - `[ ]` 审视所有页面的边距、颜色、字体，进行微调。
     - **验证：** 视觉评审通过，所有页面风格协调统一。
 
-- `[ ]` **任务 4.2：👤 添加过渡动画**
+- `[ ]` **任务 7.2：👤 添加过渡动画**
     - **描述：** 在关键交互点添加平滑的动画效果。
     - **子任务：**
         - `[ ]` 为页面跳转添加过渡动画。
         - `[ ]` 为购物车商品增删等列表变化添加动画。
     - **验证：** 交互体验评审通过，动画效果流畅自然。
 
-- `[ ]` **任务 4.3：👤 最终代码审查与清理**
+- `[ ]` **任务 7.3：👤 最终代码审查与清理**
     - **描述：** 进行最终的代码质量检查。
     - **子任务：**
         - `[ ]` 检查所有代码是否严格遵循MVVM模式。
