--- a/docs/需求分析.md
+++ b/docs/需求分析.md
@@ -1,7 +1,6 @@
 # **需求分析书 - 简易购物平台**
 
-**版本：V1.1**
-
+**版本：V1.3 (最终版)**
 ---
 
 ## **1. 项目概述与目标**
@@ -10,17 +9,17 @@
 拼夕夕商店 (暂定)
 
 ### **1.2 项目愿景**
-为鸿蒙大作业构建一个界面美观、交互流畅、**购物流程完整**的简易移动电商应用。项目旨在全面展示开发者在UI设计、组件化、页面导航和**数据持久化与状态管理**方面的综合能力。
+为鸿蒙大作业构建一个界面美观、交互流畅、**功能丰富且体验完整**的移动电商应用。项目旨在全面展示开发者在UI设计、复杂导航、**多模块数据持久化**与状态管理方面的综合能力。
 
 ### **1.3 核心目标**
-1.  **实现完整的购物闭环**: 用户可以完成从 `浏览商品 -> 查看详情 -> 添加购物车 -> 管理购物车 -> 模拟结算` 的全过程。
-2.  **卓越的UI/UX体验**: 提供统一、美观的界面设计和流畅的交互动画。
-3.  **健壮的数据与状态管理**: 实现**持久化的用户账户系统**和**运行时的跨页面状态同步**。
+1.  **实现完整的用户旅程**: 用户可以完成从 `浏览/搜索 -> 收藏 -> 加购 -> 订单确认 -> 模拟支付 -> 查看订单` 的全过程。
+2.  **提供个性化体验**: 用户拥有独立的个人中心，可以管理自己的账户信息、收货地址、订单和收藏。
+3.  **健壮的数据与状态管理**: 实现持久化的多用户账户系统、收货地址、订单、收藏，以及运行时的跨页面状态同步。
 
 ### **1.4 关键约束**
 *   **平台限制**: 所有功能必须在DevEco Studio的预览器（Previewer）中能够完整、正确地运行。
 *   **数据方案**:
-    *   **持久化数据**: 用户账户信息使用 **`@ohos.data.preferences`** 进行本地持久化存储，确保刷新预览器后数据不丢失。
+    *   **持久化数据**: 用户账户信息、收货地址、订单、收藏等使用 **`@ohos.data.preferences`** 进行本地持久化存储，确保刷新预览器后数据不丢失。
     *   **运行时数据**: 购物车内容、用户当前登录状态等临时UI状态，使用 **`AppStorage`** 进行管理，实现跨页面实时响应。
     *   **静态数据**: 商品信息在代码中硬编码。
 
@@ -28,68 +27,88 @@
 
 ## **2. 应用架构与导航**
 
-*(此部分与V1.0一致，保持不变)*
-
 ### **2.1 总体架构**
 应用采用**底部标签栏 (Bottom Tab Bar)** 作为核心导航结构，提供一级页面的主要入口。
 
 ### **2.2 底部标签栏 (Tab Bar)**
-包含两个主标签：
-*   **首页**: 默认打开的页面，用于展示商品列表。
-*   **购物车**: 展示和管理用户已添加的商品。
+应用采用**三标签**的底部导航栏作为核心结构。
+*   **首页**: 用于展示、搜索商品。
+*   **购物车**: 管理待购商品。
+*   **我的**: **`(新增)`** 个人中心入口，管理账户、订单、收藏等。
 
 ---
 
 ## **3. 核心功能需求 (Features)**
 
-### **模块一：用户中心 (User Hub)**
+### **模块一：个人中心与账户 (Personal Center & Account)**
 
 | 功能点 | 需求描述 | 状态 | 备注/实现建议 |
 | :--- | :--- | :--- | :--- |
-| **3.1 用户注册** | 提供注册页面，用户可输入用户名、密码等信息。系统进行基本校验。 | **部分实现** | **待办**: 注册成功后，需使用 **`@ohos.data.preferences`** 将用户对象（序列化为JSON字符串）**持久化存储**到本地文件中。 |
-| **3.2 用户登录** | 提供登录页面。用户输入用户名和密码进行登录。 | **部分实现** | **待办**: 需增加登录验证逻辑：**异步读取 `preferences`** 中的用户数据文件，解析后进行用户名和密码的匹配验证。 |
-| **3.3 登录状态管理** | 用户的登录状态需在应用内全局保持，并驱动UI变化。 | **待实现** | **核心工作流**: <br>1. 登录验证成功后，将 `isLoggedIn: true` 和 `currentUser: '用户名'` 等**会话状态**写入 **`AppStorage`**。<br>2. 首页等UI组件监听 `AppStorage` 的变化，实时更新欢迎语等内容。 |
+| **3.1 用户注册** | 提供注册页面，用户可输入用户名、密码等信息。系统进行基本校验。 | **部分实现** | 使用 `@ohos.data.preferences` 持久化存储用户账户。 |
+| **3.2 用户登录** | 提供登录页面。用户输入用户名和密码进行登录。 | **部分实现** | 异步读取 `preferences` 进行账户验证。 |
+| **3.3 登录状态管理** | 用户的登录状态需在应用内全局保持，并驱动UI变化。 | **待实现** | 登录成功后，使用 `AppStorage` 更新全局UI状态 (`isLoggedIn`, `currentUser`)。 |
+| **3.4 个人中心主页 `(V1.3 更新)`** | 作为“我的”标签页的根页面，是所有个性化功能的入口。 | **待实现** | **页面内容**:<br>1. **用户头像和昵称**。<br>2. **个人信息展示**: 显示用户的**电话号码**和默认**收货地址**。<br>3. **功能入口列表**: “我的订单”、“我的收藏”、“地址管理”、“修改信息”等。<br>4. **退出登录按钮**: 点击后清空登录状态，返回首页。 |
+| **3.5 修改个人信息 `(新增)`** | 提供一个专门的页面，允许用户修改自己的个人信息（如昵称、电话号码）。 | **待实现** | 1. 从个人中心页跳转至`EditProfilePage.ets`。<br>2. 页面加载当前用户的昵称、电话号码等信息。<br>3. 用户修改后点击保存，数据将被更新到`preferences`中（需根据用户名找到对应用户数据）。 |
+| **3.6 收货地址管理 `(新增)`** | 提供一个专门的页面，允许用户增、删、改、查自己的收货地址。 | **待实现** | 1. 从个人中心页跳转至`AddressManagementPage.ets`。<br>2. 页面以列表形式展示所有地址。<br>3. 支持“设为默认”功能。<br>4. 支持“新增地址”和“编辑/删除”现有地址。<br>5. 所有地址数据需使用`preferences`**持久化存储**（建议以`addresses_用户名`为key）。 |
 
-### **模块二：商品浏览 (Product Browsing)**
-
-*(此部分与V1.0一致，保持不变)*
-
-| 功能点 | 需求描述 | 状态 | 备注/实现建议 |
-| :--- | :--- | :--- | :--- |
-| **3.4 首页商品列表** | 作为应用入口，以网格或列表形式展示商品，包含图片、名称、价格和“+”加购按钮。支持按分类筛选商品。 | **部分实现** | **待办**: <br>1. 列表项的`“+”`按钮需绑定“加入购物车”逻辑。<br>2. 列表项的**卡片主体**需绑定“跳转到商品详情页”的路由事件。 |
-| **3.5 商品详情页** | 点击首页商品卡片后进入的二级页面，用于展示商品的详细信息。 | **待实现** | **页面内容**: <br>1. 商品大图。<br>2. 商品全名、详细描述。<br>3. 价格。<br>4. 一个醒目的`“加入购物车”`按钮。 |
-
-### **模块三：购物流程 (Shopping Flow)**
+### **模块二：商品浏览与发现 (Product Browsing & Discovery)**
 
 | 功能点 | 需求描述 | 状态 | 备注/实现建议 |
 | :--- | :--- | :--- | :--- |
-| **3.6 全局购物车** | 购物车数据需在应用内全局共享，不受页面切换影响。 | **待实现** | **核心方案**: 在 **`AppStorage`** 中维护一个购物车数组 `shoppingCart: CartItem[]`。<br>**注意**: 为简化实现，购物车内容**不要求持久化**，即刷新预览器后购物车清空。 |
-| **3.7 加入购物车** | 用户可以将商品添加到购物车。 | **待实现** | 1. **触发点**: 点击首页列表的`“+”`按钮或详情页的`“加入购物车”`按钮。<br>2. **逻辑**: 修改 `AppStorage` 中的 `shoppingCart` 数组。 |
-| **3.8 购物车角标** | 底部标签栏的“购物车”图标上，应实时显示购物车内商品的**总件数**。 | **待实现** | 使用`Badge`组件，其`value`绑定到根据 `AppStorage` 中 `shoppingCart` 数组计算出的总数量。 |
-| **3.9 购物车页面** | 作为一级页面，通过底部标签栏进入，用于管理购物车内所有商品。 | **待实现** | **页面功能**: <br>1. 列表展示。<br>2. 数量调整。<br>3. 删除商品。<br>4. 清空购物车。<br>5. 总价显示。<br>6. 结算按钮。 |
-| **3.10 模拟结算** | 用户完成购物的最后一步。 | **待实现** | 1. **触发点**: 点击购物车页面的`“去结算”`按钮。<br>2. **逻辑**: 清空 `AppStorage` 中的 `shoppingCart` 数据。<br>3. **跳转**: 跳转到 `CheckoutSuccessPage.ets` 页面。 |
+| **3.7 首页商品列表** | 作为应用入口，以网格或列表形式展示商品，包含图片、名称、价格和“+”加购按钮。支持按分类筛选商品。 | **部分实现** | 1. 列表项的`“+”`按钮需绑定“加入购物车”逻辑。<br>2. 列表项的**卡片主体**需绑定“跳转到商品详情页”的路由事件。<br>3. 增加“收藏”图标按钮。 |
+| **3.8 首页商品搜索 `(新增)`** | 在首页顶部提供一个搜索框，允许用户根据关键词筛选商品。 | **待实现** | 1. UI上增加一个`TextInput`作为搜索框。<br>2. 监听输入变化，实时过滤`DataSource`中的商品列表并刷新UI。 |
+| **3.9 商品详情页** | 点击首页商品卡片后进入的二级页面，用于展示商品的详细信息。 | **待实现** | **页面内容**:<br>1. 商品大图(可轮播)。<br>2. 商品全名、详细描述。<br>3. 价格。<br>4. 一个醒目的`“加入购物车”`按钮。<br>5. 一个“收藏”图标按钮。 |
+| **3.10 商品收藏功能 `(新增)`** | 用户可以收藏喜欢的商品，以便后续查看。 | **待实现** | 1. 在商品列表和详情页，增加一个“心形”收藏图标。<br>2. 点击图标可切换收藏状态，并将该商品的`id`添加或移除出当前用户的收藏列表。<br>3. 用户的收藏列表需使用 `preferences` **持久化存储**（建议以`favorites_用户名`为key）。 |
+
+### **模块三：购物与支付流程 (Shopping & Payment Flow)**
+
+| 功能点 | 需求描述 | 状态 | 备注/实现建议 |
+| :--- | :--- | :--- | :--- |
+| **3.11 全局购物车** | 购物车数据需在应用内全局共享，不受页面切换影响。 | **待实现** | **核心方案**: 在 **`AppStorage`** 中维护一个购物车数组 `shoppingCart: CartItem[]`。<br>**注意**: 为简化实现，购物车内容**不要求持久化**，即刷新预览器后购物车清空。 |
+| **3.12 加入购物车** | 用户可以将商品添加到购物车。 | **待实现** | 1. **触发点**: 点击首页列表的`“+”`按钮或详情页的`“加入购物车”`按钮。<br>2. **逻辑**: 修改 `AppStorage` 中的 `shoppingCart` 数组（检查存在性，更新数量或添加新项）。 |
+| **3.13 购物车角标** | 底部标签栏的“购物车”图标上，应实时显示购物车内商品的**总件数**。 | **待实现** | 使用`Badge`组件，其`value`绑定到根据 `AppStorage` 中 `shoppingCart` 数组计算出的总数量。 |
+| **3.14 购物车页面** | 作为一级页面，通过底部标签栏进入，用于管理购物车内所有商品。 | **待实现** | **页面功能**:<br>1. **列表展示**: 清晰展示每个商品的图片、名称、单价、购买数量。<br>2. **数量调整**: 提供`“+”`和`“-”`按钮，可修改单个商品的数量。<br>3. **删除商品**: 提供按钮，可从购物车中移除单个商品。<br>4. **清空购物车**: 提供一个按钮，可一次性清空所有商品。<br>5. **总价显示**: 实时计算并显示所有商品的总金额。<br>6. **结算按钮**: 一个醒目的`“去结算”`按钮。 |
+| **3.15 订单确认页 `(增强)`** | 从购物车点击“去结算”后，进入此页面，让用户在支付前做最后确认。 | **待实现** | **页面内容**:<br>1. **收货地址**(显示用户的默认地址，并支持点击后跳转到地址列表选择其他地址)。<br>2. **商品清单**(简要列表，不可编辑)。<br>3. **价格明细**(商品总额、运费(可为0或固定值)、应付总额)。<br>4. 一个醒目的`“确认支付”`按钮。 |
+| **3.16 模拟支付流程 `(V1.3 更新)`** | 点击“确认支付”后，模拟一个选择支付方式并完成支付的过程。 | **待实现** | 1. 弹出一个模态对话框(`AlertDialog`或自定义组件)。<br>2. 对话框内提供**支付方式选项**(如微信支付、支付宝、云闪付)，使用`Radio`按钮进行单选。<br>3. 用户选择后点击“确认支付”，关闭对话框，显示短暂加载动画(`Progress`)模拟处理过程。 |
+| **3.17 支付成功与订单生成 `(增强)`** | 模拟支付成功后，完成订单的创建并向用户反馈。 | **待实现** | 1. **创建订单对象**: 将购物车内容、总价、选择的收货地址、支付方式、下单时间等信息组装成一个订单对象。<br>2. **持久化订单**: 使用 `preferences` 将新订单**持久化存储**到当前用户的订单列表中（建议以`orders_用户名`为key）。<br>3. **清空购物车**: 清空 `AppStorage` 中的 `shoppingCart` 数据。<br>4. **跳转**: 跳转到支付成功页(`CheckoutSuccessPage.ets`)，可提供“查看订单”或“返回首页”的选项。 |
+
+### **模块四：订单与收藏管理 `(新增)`**
+
+| 功能点 | 需求描述 | 状态 | 备注/实现建议 |
+| :--- | :--- | :--- | :--- |
+| **4.1 我的订单页面** | 在个人中心点击“我的订单”进入，展示该用户的所有历史订单。 | **待实现** | 1. 异步从 `preferences` 中读取当前用户的订单列表。<br>2. 以列表形式展示每个订单的摘要信息（订单号、下单时间、总金额、状态、商品缩略图等）。 |
+| **4.2 我的收藏页面** | 在个人中心点击“我的收藏”进入，展示该用户收藏的所有商品。 | **待实现** | 1. 异步从 `preferences` 中读取当前用户的收藏商品ID列表。<br>2. 根据ID列表从`DataSource`中获取商品完整信息，并以列表形式展示（类似商品列表页，但提供取消收藏按钮）。 |
 
 ---
 
 ## **4. 非功能性需求**
 
-*(此部分与V1.0一致，保持不变)*
-
 ### **4.1 UI/UX 设计**
-*   **一致性**: 应用内所有页面应遵循统一的设计规范。建议将`注册页`的背景图样式调整为与其他页面一致的简洁风格。
-*   **动效**: 在页面跳转、元素增删时，可适当添加平滑的过渡动画，提升用户体验。
+*   **一致性**: 应用内所有页面应遵循统一的设计规范。建议将`注册页`的背景图样式调整为与其他页面一致的简洁风格（如白/浅灰底色，品牌红点缀）。
+*   **动效**: 在页面跳转、元素增删时，可适当添加平滑的过渡动画（如`sharedTransition`），提升用户体验。
+*   **响应式**: 布局应能适应不同尺寸的预览器窗口。
+
+### **4.2 性能**
+*   列表滚动应保持流畅。
+*   异步操作（如读写`preferences`）应有加载提示，避免界面卡顿。
+
+### **4.3 可靠性**
+*   对用户输入进行必要的校验（如注册信息、地址信息）。
+*   处理好数据读写失败的异常情况。
 
 ---
 
-## **5. 技术方案与数据管理 (新增)**
-
-本节明确定义了项目中核心数据管理的技术选型和职责划分。
+## **5. 技术方案与数据管理**
 
 ### **5.1 数据持久化: `@ohos.data.preferences`**
 *   **角色**: 应用的“**保险箱**”或“**记事本**”。
 *   **职责**: 负责存储需要跨应用生命周期（包括刷新预览器、关闭应用）保留的数据。
 *   **应用场景**:
-    *   存储已注册的**用户账户列表**（用户名和密码）。
+    *   存储已注册的**用户账户列表**（包含用户名、密码、电话等）。
+    *   存储每个用户的**收货地址列表 `(新增)`**。
+    *   存储每个用户的**历史订单列表 `(新增)`**。
+    *   存储每个用户的**商品收藏列表 `(新增)`**。
+    *   **存储策略**: 为支持多用户，用户相关的数据（地址、订单、收藏）应以用户名作为key的一部分进行存储，例如 `addresses_userA`, `orders_userA`, `favorites_userA`。用户列表本身可以存储在如 `user_database` 的key下。
 
 ### **5.2 运行时状态管理: `AppStorage`**
 *   **角色**: 应用的“**临时白板**”。
@@ -98,3 +117,79 @@
     *   当前用户的**登录状态** (`isLoggedIn: boolean`)。
     *   当前登录用户的**用户名** (`currentUser: string`)。
     *   **购物车**中的商品内容 (`shoppingCart: CartItem[]`)。
+
+---
+
+## **6. 数据模型定义**
+
+**用户模型 (User)**
+```typescript
+interface User {
+  username: string;
+  password: string;
+  phone?: string; // 电话号码，可选
+}
+```
+
+**收货地址模型 (Address) `(新增)`**
+```typescript
+interface Address {
+  id: string; // 地址唯一ID, 可用UUID或时间戳生成
+  userId: string; // 关联的用户
+  recipientName: string; // 收件人姓名
+  phone: string; // 联系电话
+  fullAddress: string; // 详细地址
+  isDefault: boolean; // 是否为默认地址
+}
+```
+
+**商品模型 (Product)**
+```typescript
+interface Product {
+  id: number;
+  name: string;
+  imageUrl: string; // 或 Resource
+  price: number;
+  category: string;
+  description: string;
+}
+```
+
+**购物车项目模型 (CartItem)**
+```typescript
+interface CartItem {
+  productId: number;
+  name: string;
+  imageUrl: string; // 或 Resource
+  price: number;
+  quantity: number;
+}
+```
+
+**订单模型 (Order)**
+```typescript
+interface Order {
+  orderId: string; // 可用时间戳+随机数生成
+  userId: string;
+  items: OrderItem[]; // 订单内的商品项
+  totalPrice: number;
+  shippingAddress: Address; // 订单使用的收货地址
+  paymentMethod: '微信支付' | '支付宝' | '云闪付'; // (V1.3 更新)
+  createTime: number; // 时间戳
+  status: '已支付' | '已完成'; // 订单状态
+}
+```
+
+**订单项模型 (OrderItem)**
+```typescript
+interface OrderItem {
+  productId: number;
+  name: string;
+  price: number;
+  quantity: number;
+}
+```
+
+---
+
+这份V1.3的需求分析书现在包含了所有新增和修改的功能，为您提供了一个全面、详细的项目开发依据。
