--- a/docs/项目架构.md
+++ b/docs/项目架构.md
@@ -1,140 +1,194 @@
 ## **项目架构设计书 - 简易购物平台**
 
-**版本：V1.0**
-**目标：** 为“拼夕夕商店”项目建立一个遵循MVVM（Model-View-ViewModel）设计模式、职责分离、易于维护和扩展的软件架构。
+**版本：V1.3**
+**目标：** 为“拼夕夕商店”项目建立一个遵循MVVM设计模式、职责分离、模块化、易于维护和扩展的软件架构，以支持包括个人中心、订单管理、收藏、地址管理、增强支付流程和商品搜索在内的丰富功能。
 
 ### **1. 核心架构理念：MVVM**
 
-我们将采用\*\*MVVM（Model-View-ViewModel）\*\*作为核心架构模式。这是鸿蒙ArkUI开发官方推荐的模式，能极大地提升代码的组织性和可测试性。
+*(保持不变)* 我们将继续采用\*\*MVVM（Model-View-ViewModel）\*\*作为核心架构模式。面对增加的复杂性，MVVM的解耦能力将更加关键。
 
-* **Model (模型)**: 负责数据和业务逻辑的原始表示。在我们的项目中，这包括数据结构（如`Product`, `User`）和数据服务（如与`Preferences`的交互）。
-* **View (视图)**: 负责UI的展示。它应该是“哑”的，只负责渲染ViewModel提供的数据，并将用户操作（如点击）通知给ViewModel。我们的`.ets`页面和自定义组件都属于这一层。
-* **ViewModel (视图模型)**: 作为View和Model之间的桥梁。它从Model层获取数据，处理所有业务逻辑，并管理View所需的状态。View通过数据绑定来响应ViewModel中状态的变化。
+* **Model**: 扩展以包含`Address`, `Order`, `OrderItem`模型。数据服务层将更加细化。
+* **View**: 新增多个页面（个人中心、编辑资料、地址管理、订单列表、收藏列表、订单确认）和可复用组件（地址项、订单项、收藏项）。
+* **ViewModel**: 新增多个ViewModel来处理新模块的业务逻辑和状态。
 
-### **2. 项目目录结构**
+### **2. 项目目录结构 `(V1.1 更新)`**
 
-为了实现上述MVVM模式，我建议采用以下目录结构。这能确保不同职责的代码物理分离，一目了然。
+为了容纳新功能并保持清晰，目录结构需要扩展：
 
 ```
 /entry/src/main/ets
 ├── common/
-│   └── Constants.ts          // 应用常量 (如 AppStorage 的 Key, Preferences 文件名)
+│   └── Constants.ts          // 应用常量 (AppStorage Keys, Preferences Keys/文件名)
 │
-├── model/
-│   ├── Product.ts            // 商品数据模型接口
-│   ├── User.ts               // 用户数据模型接口
-│   ├── CartItem.ts           // 购物车项模型接口
-│   └── DataSource.ts         // 硬编码的商品数据源 (静态数据)
+├── model/                    // 数据模型接口
+│   ├── Product.ts
+│   ├── User.ts
+│   ├── CartItem.ts
+│   ├── Address.ts            // (新增) 收货地址模型
+│   ├── Order.ts              // (新增) 订单模型
+│   ├── OrderItem.ts          // (新增) 订单项模型
+│   └── DataSource.ts         // 硬编码的商品数据源
 │
-├── service/
-│   └── UserService.ts          // 封装 Preferences 操作，负责用户注册和登录验证的底层服务
+├── service/                  // 数据服务层 (封装 Preferences 交互)
+│   ├── UserService.ts          // 用户账户、基础信息管理
+│   ├── AddressService.ts       // (新增) 用户收货地址 CRUD 服务
+│   ├── OrderService.ts         // (新增) 用户订单 CRUD 服务
+│   └── FavoriteService.ts      // (新增) 用户商品收藏 CRUD 服务
 │
-├── view/
-│   ├── ProductCard.ets         // [可复用] 商品卡片自定义组件
-│   ├── CartItemView.ets        // [可复用] 购物车列表项自定义组件
-│   └── BottomTabs.ets          // [可复用] 底部导航栏容器组件
+├── view/                     // 可复用 UI 组件
+│   ├── ProductCard.ets
+│   ├── CartItemView.ets
+│   ├── BottomTabs.ets          // 底部导航栏容器
+│   ├── AddressItem.ets         // (新增) 地址列表项组件
+│   ├── OrderItemSummary.ets    // (新增) 订单列表项摘要组件
+│   └── FavoriteItem.ets        // (新增) 收藏列表项组件
 │
-├── viewmodel/
-│   ├── CartViewModel.ts        // 购物车的业务逻辑和状态管理
-│   └── UserViewModel.ts        // 登录/注册页面的业务逻辑和状态管理
+├── viewmodel/                // 视图模型 (业务逻辑与状态)
+│   ├── UserViewModel.ts        // 登录/注册/基础信息 ViewModel
+│   ├── CartViewModel.ts        // 购物车 & 订单确认 ViewModel (增强)
+│   ├── ProfileViewModel.ts     // (新增) 个人中心主页 ViewModel
+│   ├── EditProfileViewModel.ts // (新增) 编辑个人信息 ViewModel
+│   ├── AddressViewModel.ts     // (新增) 地址管理 ViewModel
+│   ├── OrderViewModel.ts       // (新增) 订单列表 ViewModel
+│   └── FavoriteViewModel.ts    // (新增) 收藏列表 ViewModel
 │
-└── pages/
-    ├── Index.ets               // 首页 (View)
-    ├── CartPage.ets            // 购物车页面 (View)
-    ├── DetailsPage.ets         // 商品详情页 (View)
-    ├── LoginPage.ets           // 登录页 (View)
-    ├── RegisterPage.ets        // 注册页 (View)
-    └── CheckoutSuccessPage.ets // 结算成功页 (View)
+└── pages/                    // 页面 (View)
+    ├── Index.ets               // 首页 (含搜索、收藏按钮)
+    ├── CartPage.ets            // 购物车页面
+    ├── DetailsPage.ets         // 商品详情页 (含收藏按钮)
+    ├── LoginPage.ets
+    ├── RegisterPage.ets
+    ├── ProfilePage.ets         // (新增) 个人中心主页
+    ├── EditProfilePage.ets     // (新增) 编辑个人信息页
+    ├── AddressManagementPage.ets // (新增) 地址管理页
+    ├── OrderListPage.ets       // (新增) 我的订单页
+    ├── FavoriteListPage.ets    // (新增) 我的收藏页
+    ├── OrderConfirmationPage.ets // (新增) 订单确认页
+    └── CheckoutSuccessPage.ets // 支付成功页
 ```
 
-### **3. 数据流与状态管理架构**
+### **3. 数据流与状态管理架构 `(V1.1 更新)`**
 
-这是本架构的核心。我们将严格区分持久化数据和运行时状态，并明确它们各自的管理职责。
+数据管理的复杂性增加，需要更精细的划分。
 
 **架构图:**
 
 ```mermaid
 graph TD
-    subgraph "持久化层 (Disk)"
-        A["Preferences API
-        (user_accounts.json)"]
+    subgraph "持久化层 (Disk - Preferences)"
+        P["Preferences API
+        - users_db (账户列表)
+        - profiles_username (用户信息)
+        - addresses_username (地址列表)
+        - orders_username (订单列表)
+        - favorites_username (收藏ID列表)"]
     end
 
-    subgraph "服务层 (Service - Model的一部分)"
-        B(UserService.ts) -- 异步读/写 --> A
+    subgraph "服务层 (Service)"
+        S_User(UserService.ts) -- 读/写 --> P
+        S_Addr(AddressService.ts) -- 读/写 --> P
+        S_Order(OrderService.ts) -- 读/写 --> P
+        S_Fav(FavoriteService.ts) -- 读/写 --> P
     end
 
     subgraph "视图模型层 (ViewModel)"
-        C(UserViewModel.ts) -- 调用 --> B
-        D(CartViewModel.ts)
+        VM_User(UserViewModel.ts) -- 调用 --> S_User
+        VM_Cart(CartViewModel.ts) -- 调用 --> S_Order & S_Addr
+        VM_Profile(ProfileViewModel.ts) -- 调用 --> S_User & S_Addr
+        VM_EditP(EditProfileViewModel.ts) -- 调用 --> S_User
+        VM_Addr(AddressViewModel.ts) -- 调用 --> S_Addr
+        VM_Order(OrderViewModel.ts) -- 调用 --> S_Order
+        VM_Fav(FavoriteViewModel.ts) -- 调用 --> S_Fav & DataSource
     end
 
-    subgraph "全局运行时状态 (In-Memory)"
-        E["AppStorage
+    subgraph "全局运行时状态 (In-Memory - AppStorage)"
+        AS["AppStorage
         - isLoggedIn: boolean
         - currentUser: string
         - shoppingCart: CartItem[]"]
     end
 
     subgraph "视图层 (View)"
-        F[LoginPage.ets / RegisterPage.ets] -- 用户交互 --> C
-        G[IndexPage.ets / DetailsPage.ets] -- 用户交互 --> D
-        H[CartPage.ets] -- 用户交互 --> D
-        I[所有页面] -- 响应式绑定(自动刷新) --> E
+        V_Auth[LoginPage / RegisterPage] -- 交互 --> VM_User
+        V_Profile[ProfilePage / EditProfilePage] -- 交互 --> VM_Profile & VM_EditP
+        V_Addr[AddressMgmtPage] -- 交互 --> VM_Addr
+        V_Order[OrderListPage] -- 交互 --> VM_Order
+        V_Fav[FavoriteListPage] -- 交互 --> VM_Fav
+        V_Shop[IndexPage / DetailsPage] -- 交互 --> VM_Cart & VM_Fav
+        V_Cart[CartPage / OrderConfirmPage] -- 交互 --> VM_Cart
+        V_All[所有页面] -- 响应式绑定 --> AS
     end
 
-    C -- 登录成功后更新 --> E
-    D -- 修改购物车后更新 --> E
-
+    VM_User -- "登录/退出
+    更新状态" --> AS
+    VM_Cart -- "修改购物车
+    更新状态" --> AS
+    VM_Cart -- 下单成功 --> S_Order
+    VM_Fav -- 修改收藏 --> S_Fav
 ```
 
 **详细说明:**
 
 1. **持久化层 (`Preferences`)**:
-   * 由且仅由 `UserService.ts` 进行访问。任何其他模块都不应直接操作`Preferences`。
-   * `UserService` 负责将用户对象数组序列化为JSON字符串进行存储，并在读取时反序列化。它对外提供清晰的异步接口，如 `registerUser(user)` 和 `login(username, password)`。
+   * 现在存储多种类型的数据，**严格按用户隔离**。使用 `username` 作为 key 的一部分（如 `orders_username`, `favorites_username`）是实现多用户数据隔离的关键。
+   * 由各自的 **Service 类** 独占访问。例如，`OrderService.ts` 负责所有与 `orders_username` 相关的读写操作。
 
-2. **全局运行时状态 (`AppStorage`)**:
-   * 作为应用当前会话的“**单一数据源**”。
-   * **`isLoggedIn` 和 `currentUser`**: 由 `UserViewModel` 在登录或退出时进行更新。
-   * **`shoppingCart`**: 由 `CartViewModel` 进行所有增、删、改操作。
-   * **视图层 (`View`)**: 通过 `@StorageLink` 或 `@StorageProp` 装饰器订阅 `AppStorage` 中的数据，实现UI的自动、响应式更新。
+2. **服务层 (`Service`)**:
+   * **职责细化**: 每个 Service 负责一个特定领域的数据持久化逻辑（用户账户、地址、订单、收藏）。
+   * **接口**: 对外提供清晰的异步接口（如 `OrderService.getOrders(username)`, `FavoriteService.addFavorite(username, productId)`）。
+   * **数据转换**: Service 内部负责 JSON 序列化/反序列化。
 
-3. **本地UI状态 (`@State`)**:
-   * 对于仅在单个组件内部使用的状态（如输入框的文本内容、某个开关的状态），应使用 `@State`，避免不必要的全局污染。
+3. **视图模型层 (`ViewModel`)**:
+   * **数量增加**: 新增多个 ViewModel 对应新的页面和功能模块。
+   * **逻辑封装**: 每个 ViewModel 负责其对应视图的业务逻辑（如计算总价、验证表单、调用 Service 获取/保存数据、更新 `AppStorage`）。
+   * **跨 ViewModel 协作**: 可能存在少量协作，例如 `CartViewModel` 在下单时需要调用 `OrderService`，并可能需要从 `AddressService` 获取默认地址。
 
-### **4. 导航（Routing）架构**
+4. **全局运行时状态 (`AppStorage`)**:
+   * 职责保持不变：管理**临时性、全局性**的 UI 状态（登录状态、当前用户、购物车）。
+   * **注意**: 用户的个人信息（电话、地址）、订单、收藏等**持久化数据不应直接放入 AppStorage**，ViewModel 应在使用时从 Service 获取。
 
-我们将结合使用鸿蒙的 `Tabs` 组件和 `router` 模块来构建导航。
+5. **本地UI状态 (`@State`)**:
+   * 继续用于管理组件内部的临时状态（输入框内容、搜索关键词、加载状态等）。
+
+### **4. 导航（Routing）架构 `(V1.1 更新)`**
 
 1. **主导航容器 (`BottomTabs.ets`)**:
-   * 创建一个名为 `BottomTabs.ets` 的自定义组件。
-   * 内部使用 `Tabs` 组件，`barPosition` 设置为 `BarPosition.End`。
-   * 包含两个 `TabContent`，分别对应 `Index.ets` (首页) 和 `CartPage.ets` (购物车页)。
-   * 这个 `BottomTabs` 组件将作为应用的入口和根视图。
+   * 包含**三个** `TabContent`，分别对应 `Index.ets` (首页)、`CartPage.ets` (购物车页) 和 `ProfilePage.ets` (我的)。
 
 2. **页面跳转 (`router`)**:
-   * **`router.pushUrl()`**: 用于从主页面“下钻”到次级页面。
+   * **`router.pushUrl()`**: 用于导航到所有非 Tab 页面的次级页面。
      * `Index` -> `DetailsPage`
-     * `Index` -> `LoginPage`
-   * **`router.replaceUrl()`**: 用于在同一层级的流程中切换，不保留历史记录。
+     * `Index` (未登录时) -> `LoginPage`
+     * `ProfilePage` -> `EditProfilePage`
+     * `ProfilePage` -> `AddressManagementPage`
+     * `ProfilePage` -> `OrderListPage`
+     * `ProfilePage` -> `FavoriteListPage`
+     * `CartPage` -> `OrderConfirmationPage`
+     * `OrderConfirmationPage` -> `CheckoutSuccessPage`
+   * **`router.replaceUrl()`**:
      * `LoginPage` <-> `RegisterPage`
-   * **`router.back()`**: 用于从次级页面返回上一级。
-     * `DetailsPage` -> `Index`
-     * `LoginPage` (登录成功后) -> `Index`
+   * **`router.back()`**: 用于从次级页面返回。
 
-### **5. 实施建议**
+### **5. 实施建议 `(V1.1 更新)`**
 
-1. **第一步：搭建骨架**
-   * 按照上述目录结构创建所有文件夹和空的 `.ts` / `.ets` 文件。
-   * 定义 `model` 目录下的所有数据模型接口。
+面对增加的复杂性，建议采用分层、分模块的开发策略：
 
-2. **第二步：实现用户持久化**
-   * 编写 `UserService.ts`，封装对 `Preferences` 的所有操作。这是整个数据持久化的基石。
-   * 编写 `UserViewModel.ts`，调用 `UserService` 并处理注册/登录的业务逻辑。
+1. **基础建设**:
+   * 更新目录结构，创建所有新文件。
+   * 定义所有 `model`。
+   * 实现所有 `Service` 类，彻底解决数据持久化问题。**优先测试 Service 层**。
 
-3. **第三步：构建视图和交互**
-   * 从 `LoginPage` 和 `RegisterPage` 开始，将UI与 `UserViewModel` 连接起来，调通整个用户流程。
-   * 接着构建 `BottomTabs` 和 `IndexPage`，展示商品列表。
-   * 实现 `CartViewModel` 和 `CartPage`，完成购物车的核心功能。
+2. **核心流程**:
+   * 实现用户注册/登录流程 (`UserService`, `UserViewModel`, `LoginPage`, `RegisterPage`)。
+   * 实现商品浏览和详情 (`DataSource`, `IndexPage`, `DetailsPage`)。
+   * 实现购物车基础功能 (`CartViewModel`, `CartPage`, `AppStorage`)。
 
+3. **新模块逐一击破**:
+   * **个人中心**: `ProfileViewModel`, `ProfilePage`, 退出登录。
+   * **收藏**: `FavoriteService`, `FavoriteViewModel`, `FavoriteListPage`, 在首页/详情页添加收藏按钮。
+   * **地址管理**: `AddressService`, `AddressViewModel`, `AddressManagementPage`。
+   * **订单与支付**: 增强 `CartViewModel`，实现 `OrderConfirmationPage`, `OrderService`, `OrderViewModel`, `OrderListPage`, `CheckoutSuccessPage`。
+   * **搜索**: 在 `IndexPage` 添加搜索逻辑。
+   * **编辑信息**: `EditProfileViewModel`, `EditProfilePage`。
+
+4. **联调与测试**: 在各模块完成后，进行端到端的流程测试。
