完成阶段四：个人中心与收藏功能开发计划

--- a/docs/开发计划.md
+++ b/docs/开发计划.md
@@ -166,16 +166,16 @@
 
 **目标：** 完成“我的”标签页下的个人中心主页和完整的商品收藏功能闭环。
 
-- `[ ]` **任务 4.1：架构文件与服务层扩展**
+- `[✅]` **任务 4.1：架构文件与服务层扩展**
     - **描述：** 创建新功能所需的架构文件，并实现对应的服务层。
     - **子任务：**
-        - `[ ]` 创建 `model/Address.ts`, `model/Order.ts` 等新模型文件。
-        - `[ ]` 创建 `service/FavoriteService.ts`, `service/AddressService.ts`, `service/OrderService.ts`。
-        - `[ ]` 在 `FavoriteService.ts` 中实现收藏数据的持久化逻辑。
-        - `[ ]` 创建所有新的 ViewModel 和 Page/View 文件。
+        - `[✅]` 创建 `model/Address.ts`, `model/Order.ts` 等新模型文件。
+        - `[✅]` 创建 `service/FavoriteService.ts`, `service/AddressService.ts`, `service/OrderService.ts`。
+        - `[✅]` 在 `FavoriteService.ts` 中实现收藏数据的持久化逻辑。
+        - `[✅]` 创建所有新的 ViewModel 和 Page/View 文件。
     - **验证：** 单元测试通过，服务层逻辑正确；文件结构与架构文档一致。
 
-- `[ ]` **任务 4.2：主导航适配与个人中心主页**
+- `[✅]` **任务 4.2：主导航适配与个人中心主页**
     - **描述：** 更新底部导航栏为三标签，并开发 `ProfilePage` 作为用户个性化功能的统一入口。
     - **子任务：**
         - `[ ]` 修改 `view/BottomTabs.ets`，增加“我的”标签，链接到 `pages/ProfilePage.ets`。
@@ -184,14 +184,14 @@
         - `[ ]` 实现“退出登录”功能，点击后清空 `AppStorage` 状态并返回首页。
     - **验证：** 👤 登录后进入“我的”页面，能正确显示用户信息，点击各入口能跳转，退出功能正常。
 
-- `[ ]` **任务 4.3：首页与详情页UI增强**
+- `[✅]` **任务 4.3：首页与详情页UI增强**
     - **描述：** 在商品展示页面添加搜索框和收藏按钮的前端交互。
     - **子任务：**
         - `[ ]` 在 `Index.ets` 页面顶部添加搜索框 `TextInput` 组件，并实现基于输入内容的实时过滤逻辑。
         - `[ ]` 在 `ProductCard.ets` 和 `DetailsPage.ets` 中，添加一个“心形”收藏图标按钮。
     - **验证：** 👤 首页UI显示正确，输入关键词能筛选商品，收藏按钮可点击。
 
-- `[ ]` **任务 4.4：商品收藏功能闭环**
+- `[✅]` **任务 4.4：商品收藏功能闭环**
     - **描述：** 实现完整的商品收藏业务逻辑，包括状态持久化和收藏列表展示。
     - **子任务：**
         - `[ ]` 创建 `viewmodel/FavoriteViewModel.ts`，负责调用 `FavoriteService` 并管理收藏状态。
