feat: 增强个人中心功能，添加用户信息和默认地址加载逻辑，优化注册页面手机号输入验证

--- a/docs/项目架构.md
+++ b/docs/项目架构.md
@@ -36,8 +36,8 @@
 │   └── FavoriteService.ts      // (新增) 用户商品收藏 CRUD 服务
 │
 ├── view/                     // 可复用 UI 组件
-│   ├── ProductCard.ets
-│   ├── CartItemView.ets
+│   ├── ProductCard.ets         // 商品卡片组件
+│   ├── CartItemView.ets        // 购物车列表项组件
 │   ├── BottomTabs.ets          // 底部导航栏容器
 │   ├── AddressItem.ets         // (新增) 地址列表项组件
 │   ├── OrderItemSummary.ets    // (新增) 订单列表项摘要组件
@@ -56,8 +56,8 @@
     ├── Index.ets               // 首页 (含搜索、收藏按钮)
     ├── CartPage.ets            // 购物车页面
     ├── DetailsPage.ets         // 商品详情页 (含收藏按钮)
-    ├── LoginPage.ets
-    ├── RegisterPage.ets
+    ├── LoginPage.ets           // 登录页
+    ├── RegisterPage.ets        // 注册页
     ├── ProfilePage.ets         // (新增) 个人中心主页
     ├── EditProfilePage.ets     // (新增) 编辑个人信息页
     ├── AddressManagementPage.ets // (新增) 地址管理页
